Added goldfinch, Critter catch items

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+/bin/
+/obj/
+/.vs/
+
+# C stuff ... 
+
 # Prerequisites
 *.d
 
@@ -50,3 +56,4 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
